--- a/pages/projects.html
+++ b/pages/projects.html
@@ -59,8 +59,8 @@
                 <div class="gallery-item">
                     <a target="_blank" href="../img/projects/web-design-01.jpg">
                         <img src="../img/thumbnail/web-design-01-sm.jpg" 
-                             alt="tea time mockup" width="600" height="400"></a>
-                    <div class="gallery-item-desc">Tea Time, eCommerce site | <i>inDesign</i></div>
+                             alt="loose leaf mockup" width="600" height="400"></a>
+                    <div class="gallery-item-desc">Loose Leaf, eCommerce site | <i>Adobe XD</i></div>
                 </div>
             </div>
             <!-- Item 02 -->
