--- a/pages/projects.html
+++ b/pages/projects.html
@@ -38,7 +38,7 @@
                     <a target="_blank" href="https://pvfm.netlify.app/">
                         <img src="../img/thumbnail/web-01-sm.jpg" 
                              alt="pinkney's vineyard of faith ministries home page"></a>
-                    <div class="gallery-item-desc">Pinkney's Vineyard of Faith Ministries | HTML/CSS, Bootstrap, JavaScript, jQuery</div>
+                    <div class="gallery-item-desc">Pinkney's Vineyard of Faith Ministries | HTML/CSS, Bootstrap, jQuery</div>
                 </div>
             </div>
             <!-- Item 02 -->
@@ -47,7 +47,7 @@
                     <a target="_blank" href="https://717egyptiandream.wixsite.com/website">
                         <img src="../img/thumbnail/web-02-sm.jpg" 
                              alt="love is brightest in the dark"></a>
-                    <div class="gallery-item-desc">Egyptian Dream Arabians | CMS</div>
+                    <div class="gallery-item-desc">Egyptian Dream Arabians | Website Builder</div>
                 </div>
             </div>
         </div>
