--- a/pages/about.html
+++ b/pages/about.html
@@ -41,46 +41,60 @@
                     produce is up-to-date with current trends. My enthusiasm for web development and multimedia drives me to produce stunning work for both business and consumer use. </p>
             </div>
         </section>
+        
         <!-- skills -->
-        <section class="my-skills"> 
-            <h1>My Skills</h1>
-            <div class="my-skills__column">
-                <p>HTML5</p>
-                <div class="my-skills__container">
-                    <div class="skills html">90%</div>
-                </div>
-                <p>CSS3</p>
-                <div class="my-skills__container">
-                  <div class="skills css">80%</div>
-                </div>
-                <p>JavaScript</p>
-                <div class="my-skills__container">
-                  <div class="skills js">65%</div>
-                </div>
-                <p>Bootstrap 4</p>
-                <div class="my-skills__container">
-                  <div class="skills bs">75%</div>
-                </div>
-            </div>
-            <div class="my-skills__column">
-                <p>Photoshop</p>
-                <div class="my-skills__container">
-                  <div class="skills ps">95%</div>
-                </div>
-                <p>Adobe XD</p>
-                <div class="my-skills__container">
-                  <div class="skills xd">85%</div>
-                </div>
-                <p>Responsive &amp; Mobile Design</p>
-                <div class="my-skills__container">
-                  <div class="skills rm">90%</div>
-                </div>
-                <p>WordPress</p>
-                <div class="my-skills__container">
-                  <div class="skills wp">90%</div>
-                </div>
-            </div>
-            <div class="clearfix"></div>
+        <section class="my-skills">
+            <ul class="skills-bar-container">
+                <li>
+                  <div class="progressbar-title">
+                    <h3>HTML / CSS</h3>
+                    <span class="percent" id="htmlcss-pourcent"></span>
+                  </div>
+                  <div class="bar-container">
+                    <span class="progressbar progressred" id="progress-htmlcss"></span>
+                  </div>
+                </li>
+
+                <li>
+                  <div class="progressbar-title">
+                    <h3>JavaScript / jQuery</h3>
+                    <span class="percent" id="javascript-pourcent"></span>
+                  </div>
+                  <div class="bar-container">
+                    <span class="progressbar progressblue" id="progress-javascript"></span>
+                  </div>
+                </li>
+
+                <li>
+                  <div class="progressbar-title">
+                    <h3>Responsive / Web Design</h3>
+                    <span class="percent" id="design-pourcent"></span>
+                  </div>
+                  <div class="bar-container">
+                    <span class="progressbar progresspurple" id="progress-design"></span>
+                  </div>
+                </li>
+
+                <li>
+                  <div class="progressbar-title">
+                    <h3>Bootstrap</h3>
+                    <span class="percent" id="bootstrap-pourcent"></span>
+                  </div>
+                  <div class="bar-container">
+                    <span class="progressbar progressorange" id="progress-bootstrap"></span>
+                  </div>
+                </li>
+
+                <li>
+                  <div class="progressbar-title">
+                    <h3>Adobe Photoshop / Adobe XD</h3>
+                    <span class="percent" id="adobe-pourcent"></span>
+                  </div>
+                  <div class="bar-container">
+                    <span class="progressbar progressgreen" id="progress-adobe"></span>
+                  </div>
+                </li>
+            </ul>
         </section>
     </main>
     <footer>
